--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 title: Arjun's Github Page
 description: Hey Julia
-decription: sup
+decription: how are you Panda pants 
